# that-game

./: .gitignore  LICENSE  README.md  preview.ipynb  preview_plot.ipynb  pyproject.toml
src/that_game/: __init__.py  _calculator.py  _expression.py  _loader.py  _metadata.py  _models.py  _providers.py  _status.py  _types.py  _utils.py  _visualization.py  expression.py  providers.py
src/that_game/_loaders/: statsbomb.py
src/that_game/_parsers/: __init__.py  base.py  statsbomb.py
src/that_game/_providers/: base.py  skillcorner.py  sportec.py  statsbomb.py
tests/: conftest.py  test_expression.py  test_load.py  test_loader.py  test_loaders.py  test_models.py  test_providers.py  test_utils.py
tests/data/load/: sample.csv  sample.json  sample.jsonl  sample.xml
tests/data/statsbomb/: competitions.json
tests/loaders/: test_statsbomb.py
tests/parsers/: test_statsbomb.py
